Implemented checking microsoft cryptoAPI stores.

--- a/csharp/RocaTest/RocaTest.csproj
+++ b/csharp/RocaTest/RocaTest.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RocaTest.cs" />
